# solarkapitbahay

./: .env.example  .gitignore  RESTORE_POINT.md  index.html  package-lock.json  package.json  render.yaml  tailwind.config.js  vercel.json
backend/: README.md  auth.py  clustering.py  config.py  data_generator.py  database.py  db_backend.py  generate_merged_dataset.py  live_clustering.py  main.py  merged_dataset_loader.py  mqtt_bridge.py  mqtt_store.py  notifications.py  pyproject.toml  requirements.txt  seed_db.py  solar_data.py
backend/algorithms/: greedy.py
backend/data/: rural_davao_merged.txt
data/: README.md  merged_household_dataset.csv
docs/: ADET_MANUSCRIPT_REFERENCE.md  AUTH_SETUP.md  CHAPTER_5.md  CLUSTERING.md  CLUSTERING_PRESENTATION_SCRIPT.md  DATABASE_DESIGN_SECTION.md  DATABASE_SCHEMA.md  DEPLOY_DEMO.md  DEPLOY_VERCEL.md  MQTT_VERCEL.md
firmware/esp32/: ACS712_VOLTAGE_WIRING.md  CIRCUIT_ARCHITECTURE.md  DEMO_LIVE_UI.md  FINAL_SYSTEM.md  LCD_I2C_Wiring.md  LCD_Keypad_Shield_Wiring.md  LCD_RESUME_TOMORROW.md  MQTT_BROKER_SETUP.md  README.md  REAL_SENSORS.md  TROUBLESHOOT_NO_READINGS.md
notebooks/: SolarKapitBahay_Colab_50_100.py  SolarKapitBahay_Colab_Simulation.py
src/: app.jsx  index.css  login.jsx  main.jsx
src/components/: BrandLogo.jsx  ErrorBoundary.jsx
src/constants/: circuits.js  clustering.js  energyTransfer.js  glossary.js  mockSimulation.js  theme.js
src/context/: LiveDataContext.jsx  ToastContext.jsx
src/hooks/: liveDataUtils.js  useAuth.js  useClustering.js  (+4 more)
supabase/: migrate_onboarding.sql  migrate_roles.sql  schema.sql
(+69 files in other folders)
