[project]
name = "solarkapitbahay-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0",
  "psycopg2-binary>=2.9.9",
  "PyJWT>=2.8.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
  "paho-mqtt>=2.0.0",
]

[tool.vercel]
entrypoint = "main.py"
